# lvgl-clion-demo

./: CMakeLists.txt  lv_conf.h  main.c
USER/App/: App.cpp  App.h  my_App.cpp
USER/App/Common/DataProc/: DP_Clock.cpp  DP_LIST.inc  DP_MAG.cpp  DP_MusicPlayer.cpp  DP_Power.cpp  DP_Recorder.cpp  DP_SportStatus.cpp  DP_Storage.cpp  DP_SysConfig.cpp  DP_TrackFilter.cpp  DP_TzConv.cpp  DataProc.cpp  DataProc.h
USER/App/Pages/: AppFactory.cpp  Page.h
USER/App/Pages/Dialplate/: Dialplate.cpp  Dialplate.h  DialplateModel.cpp  DialplateModel.h
USER/App/Pages/StartUp/: StartUpModel.h
USER/App/Pages/StatusBar/: StatusBar.cpp
USER/App/Pages/SystemInfos/: SystemInfos.cpp  SystemInfosModel.cpp  SystemInfosView.cpp
USER/App/Pages/_Template/: Template.cpp  Template.h  TemplateView.h
USER/App/Resource/: ResourcePool.cpp
USER/App/Utils/DataCenter/: DataCenterLog.h
USER/App/Utils/PageManager/: PM_Log.h  PM_Router.cpp  PageManager.h
